# RotateFilter

./: CMakeLists.txt  DLLSetup.cpp  RotateFilter.cpp  RotateFilter.def  RotateFilter.h  RotateFilter.rc  RotateProperties.h  resource.h  stdafx.h
